samples/_failures_safe/1761276597_6f2c7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4936463d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_4936463d.c:159:29: error: expected ‘;’ at end of input
  159 |                         heap
      |                             ^
      |                             ;
./samples/SAFE/__tmp_4936463d.c:159:25: error: expected declaration or statement at end of input
  159 |                         heap
      |                         ^~~~
./samples/SAFE/__tmp_4936463d.c:159:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4936463d.c:159:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4936463d.c:159:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4936463d.c:159:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4936463d.c:159:25: error: expected declaration or statement at end of input
